# git-year-end-report

./: .containerignore  .gitignore  Containerfile  LICENSE  README.md  config.example.yaml  main.py  pyproject.toml
git_year_end_report/: cli.py  config.py  forge_client.py  models.py  report.py
git_year_end_report/forges/: github.py  gitlab.py  pagure.py
